# profiler0

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
examples/host/: Cargo.toml
examples/host/src/: main.rs
examples/methods/: Cargo.toml
examples/methods/guest/: Cargo.toml
examples/methods/guest/src/: main.rs
host/: Cargo.toml
host/src/: cycle_trace.rs  main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: cycle_trace.rs  main.rs  perf_trace.rs
profiler0-guest/: Cargo.toml
profiler0-guest/src/: lib.rs
profiler0-host/: Cargo.toml
profiler0-host/src/: lib.rs
