[workspace]
members = [
    "examples/host",
    "examples/methods",
    "profiler0-host",
    "profiler0-guest"
]
exclude = [ "profiler-example.png", "title.png" ]
resolver = "2"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true
opt-level = 3

[profile.release.build-override]
opt-level = 3