[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
serde = {version = "1.0", features = ["derive"]}
risc0-zkvm = { version = "=0.19.1", features = ["prove"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
rand_chacha = "0.3.1"
num-traits = "0.2.17"
raki = "0.1.3"
colored = "2.0.4"