[package]
name = "l2r0-profiler-guest"
version = "0.20.1"
authors = ["Weikeng Chen <weikeng.chen@l2iterative.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Profiler for RISC Zero, guest side program"
repository = "https://github.com/l2iterative/profiler0"
readme = "../README.md"

[features]
print-trace = []