[package]
name = "method"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes" }
serde = { version = "1.0", features = ["derive"] }
base64ct = "1.6.0"
num-bigint = "0.4.4"
lazy_static = "1.4.0"
l2r0-profiler-guest = { path = "../../../profiler0-guest" }

[features]
default = ["print-trace"]
print-trace = ["l2r0-profiler-guest/print-trace"]